--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,20 @@
 .row {
 	margin: 0%;
-	height: 100%;
 }
-.text {
+.wholebody {
+	position: absolute;
+	background: url("../img/blinking-stars2.gif") no-repeat center center fixed; ;
+	margin-right: 0%;
+	width: 100%;
+	height: 100%;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+p {
+	margin-top: 5%;
+	position: relative;
 	color: #EEEEEE;
 }
 a {
@@ -12,21 +24,18 @@ a:hover {
 	color: #EEEEEE;
 	text-decoration: none;
 }
-
-.background_image {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-}
-.mainpara {
-	padding-top: 5%;
-}
 hr {
 	border-color: #9C9C9C;
 	margin-top: 0.5%;
 	margin-bottom: 0.5%;
 }
-.link {
-	margin-top: 48%;
+.bottom {
+	position: fixed;
+	bottom: 7%;
+	font-size: 18px;
+}
+.socialmedia {
+	position: fixed;
+	bottom: 5%;
 }
 
